--- a/config/config.example.yml
+++ b/config/config.example.yml
@@ -9,6 +9,9 @@ test:
 production:
   session_key: # any unique string that identifies your app
   session_secret: # run "rake secret" to generate a session secret
+  app_name: # the name of your application, e.g. "KZAK"
+  domain: # http://example.com # the url for your application
+  mailer: # noreply@example.com # the from address for outgoing emails
   s3_access_id: # sign up for Amazon S3 at http://aws.amazon.com/s3/
   s3_secret_key: # ...then go to Your Account->Security Credentials to get your access_id and secret_key
   s3_bucket_name: # ...then choose a name for your bucket, set it here, and run "rake s3:create"
