--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,6 @@ config/database.yml
 config/smtp.yml
 config/deploy.rb
 db/*.sqlite3
-public/system/**/*
+public/system/*
 bin/*
 vendor/bundler_gems/*
