--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,10 @@
 .DS_Store
 .bundle
-/vendor/bundler_gems
-*.log
-log/*
-public/uploads/**/*
-tmp/**/*
-tmp/restart.txt
-config/amazon_s3.yml
 config/config.yml
 config/database.yml
-config/smtp.yml
 config/deploy.rb
 db/*.sqlite3
 public/system/*
+public/uploads/*
+log/*
+tmp/*
