--- a/config/config.example.yml
+++ b/config/config.example.yml
@@ -1,6 +1,7 @@
 development:
   session_key: kzak_development
   session_secret: 500cad18bf781eae3800b34aad609361
+  secret_token: c0377edbd88984c5e393b173b43fb8c7fdec4b
   app_name: example
   domain: http://kzak.local
   mailer: noreply@example.com
@@ -8,10 +9,12 @@ development:
 test:
   session_key: kzak_test
   session_secret: 0b5e5ab4ac1797c32911814431a5b2fb
+  secret_token: c0377edbd88984c5e393b173b43fb8c7fdec4bf7a6
 
 production:
   session_key: # any unique string that identifies your app
   session_secret: # run "rake secret" to generate a session secret
+  secret_token: # run "rake secret" to generate a secret token
   app_name: # the name of your application, e.g. "KZAK"
   domain: # http://example.com # the url for your application
   mailer: # noreply@example.com # the from address for outgoing emails
