--- a/config/config.example.yml
+++ b/config/config.example.yml
@@ -22,7 +22,7 @@ production:
   s3_secret_key: # ...then go to Your Account->Security Credentials to get your access_id and secret_key
   s3_bucket_name: # ...then choose a name for your bucket, set it here, and run "rake s3:create"
   s3_host_alias: # (optional) provide your cloudfront CNAME http://aws.amazon.com/cloudfront
-  hoptoad_key: # Sign up at http://hoptoadapp.com and provide your API key for exception notification emails
+  HOPTOAD_API_KEY: # Sign up at http://hoptoadapp.com and provide your API key for exception notification emails
   smtp_address: # smtp.gmail.com
   smtp_port: # 587
   smtp_user_name: # example@gmail.com
